--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,15 @@
              http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <servlet>
+        <servlet-name>DynamicServlet</servlet-name>
+        <servlet-class>com.example.servlets.DynamicServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DynamicServlet</servlet-name>
+        <url-pattern>/dynamic</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>StaticServlet</servlet-name>
         <servlet-class>com.example.servlets.StaticServlet</servlet-class>
     </servlet>
